--- a/src/seshet-operators.css
+++ b/src/seshet-operators.css
@@ -13,6 +13,13 @@
 
 .seshet-sqrt{
     margin-top:1px;
+    border-image-source: url(square_root.svg);
+    border-image-slice: 0 0 0 100%;
+    border-image-repeat: stretch;
+    border-image-width: 4px 0 0 11px;
+    padding-left: 8px;
+    border-style: solid;
+    display: inline-block;
 }
 
 .seshet-sqrt-body{
@@ -32,23 +39,18 @@
   border-left: 2px solid black;
   border-right: 2px solid black;
   border-radius: 8px;
-  padding-left: 3px;
-  padding-right: 3px;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-top:2px;
+  padding-bottom:2px;
 }
 
-.seshet-sqrt{
-    border-image-source: url(square_root.svg);
-    border-image-slice: 0 0 0 100%;
-    border-image-repeat: stretch;
-    border-image-width: 4px 0 0 11px;
-    padding-left: 8px;
-    border-style: solid;
-    display: inline-block;
-    
-}
-.seshet-sqrt{
-    display: inline-block;
-}
-.seshet-sqrt-body{
-    display:inline-block;
+.seshet-abs{
+  display:inline-block;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  padding-left: 1px;
+  padding-right: 1px;
+  padding-top:2px;
+  padding-bottom:3px;
 }
